--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,239 @@
 <html>
     <head>
-        <title>Welcome!</title>
+<div class="topnav">
+  <a class="#home" href="#home">Home</a>
+  <a href="#scenes">Scences</a>
+  <a href="#more">More</a>
+</div>        
+        <title>Welcome to our Anime App!</title>
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
-    <body>
-        <h1>Hello world!</h1>
-        <p>We can build a full webpage here</p>
-        <form>
-            <input type="text" name="nickname" placeholder="Enter your nickname"/>
-            <input type="submit" value="Submit"/>
+    <body class="bod" background="https://www.pngmagic.com/product_images/website-background-image-size-psd-vector-photo.jpg">
+       <span id="home">
+        <h1 id="header">Hello and welcome to our page</h1>
+        </span>
+        <p class="desc">Please put your name and favorite anime you enjoy!</p>
+        <form method="POST" action="/sendAnimelink">
+            <label for="user_name">What's your username?</label>
+            <input type="text" name="user_name">
+            <label for="favorite_animes">What is your favorite genre of animes?(Drama, Action, Slice of Life)</label>
+            <input type="text" name="favorite_animes">
+            <button class="btn btn-primary" type="submit">Submit</button>
         </form>
-    </body>
+    <style>
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+/* Caption text */
+.text {
+  color: #F2F2F2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #F2F2F2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+  background-color: #717171;
+}
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+</style>
+</head>
+<body>
+<div class="mySlides fade">
+  <a href="https://en.wikipedia.org/wiki/Attack_on_Titan_(TV_series) " > 
+  <img src="https://images-na.ssl-images-amazon.com/images/I/911qTnP-2fL._RI_.jpg" style="width:100%">
+  </a>
+  <div class="text">Attack on titans </div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/Violet_Evergarden" >   
+  <img src="http://garaitimi.hu/wp-content/uploads/2018/12/blog-2.jpg" style="width:100%">
+  </a>
+  <div class="text">Violet Evergarden</div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/Demon_Slayer:_Kimetsu_no_Yaiba">
+  <img src="https://www.pennlive.com/resizer/IjFORTHB665SYy4C4DxSy3twBU4=/1280x0/smart/cloudfront-us-east-1.images.arcpublishing.com/advancelocal/2IKIFAKFCFB2LA6FR6Z5YYWOFU.jpg" style="width:100%">
+</a>
+  <div class="text">Demon slayer</div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/Hunter_%C3%97_Hunter_(2011_TV_series)">
+  <img src="https://www.tonica.la/__export/1595874349495/sites/debate/img/2020/07/27/hunter-x-hunter-llegarx-a-funimation.jpg_1902800913.jpg" style="width:100%">
+</a>
+  <div class="text">HunterxHunter</div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/Haikyu">
+  <img src="https://i.kym-cdn.com/entries/icons/original/000/020/360/haikyuu-wallpaper-Popcultertime.jpg" style="width:100%">
+</a>
+  <div class="text">Haikyuu</div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/My_Hero_Academia">
+  <img src="https://thecinemaholic.com/wp-content/uploads/2021/03/My-Hero-Academia-2.jpg" style="width:100%">
+</a>
+  <div class="text">My hero Academia</div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/Kuroko%27s_Basketball">
+  <img src="https://static.gojinshi.com/wp-content/uploads/2020/08/Kuroko-no-Basket-Watch-Order-Guide.jpg" style="width:100%">
+</a> 
+<div class="text">Kuroko's Basketball</div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/Ouran_High_School_Host_Club">
+  <img src="https://img4.hulu.com/user/v3/artwork/4a92ac4e-cbe2-41f5-bfb8-eb11dc479bfd?base_image_bucket_name=image_manager&base_image=569861d4-2f21-42a2-8bf8-69291d544c87&size=1200x630&format=jpeg" style="width:100%">
+</a> 
+<div class="text">ouran highschool host club</div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/Fruits_Basket_(2001_TV_series)">
+  <img src="https://www.slashfilm.com/wp/wp-content/images/fruits-basket-e1585783152410.jpg" style="width:100%">
+</a> 
+<div class="text">Fruits Basket</div>
+</div>
+<div class="mySlides fade">
+<a href="https://en.wikipedia.org/wiki/The_Promised_Neverland">
+  <img src="https://cdn.vox-cdn.com/thumbor/55iRnM0Sj0Uvk0bsAUS1I3bjvCw=/1400x1050/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22311457/The_Promised_Neverland_Season_2_Episode_4.jpeg" style="width:100%">
+</a> 
+<div class="text">the Promise Neverland</div>
+</div>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+<script>
+var slideIndex = 1;
+showSlides(slideIndex);
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
+</script>
+<span id="scenes">
+<h1 class="clips">Epic scenes</h1>
+</span>
+<iframe id="basketballclip" width="560" height="315" src="https://www.youtube.com/embed/q2-oBjM9tWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="volleyball" width="560" height="315" src="https://www.youtube.com/embed/u2n1KrdYxsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="thunderclap" width="560" height="315" src="https://www.youtube.com/embed/cw5WqF6egmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="sao" width="560" height="315" src="https://www.youtube.com/embed/lCab9jQoock" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="violet" width="560" height="315" src="https://www.youtube.com/embed/t83lEarjuSc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="spider" width="560" height="315" src="https://www.youtube.com/embed/_DRFT1l_MRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="hinata" width="560" height="315" src="https://www.youtube.com/embed/IyKgsRpR0-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="voice" width="560" height="315" src="https://www.youtube.com/embed/HTxWKuct5Uw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<span id="more">
+<h1 class="like">Animes You might like:</h1>
+</span>
+<ul class="list">
+  <li>One-Punch Man</li>
+  <li>Fullmetal Alchemist: Brotherhood</li>
+  <li>One Piece</li>
+  <li>Naruto</li>
+  <li>Tokyo Ghoul</li>
+  <li>Code Geass</li>
+  <li>The Seven Deadly Sins</li>
+  <li>Parasyte: The Maxim</li>
+  <li>Death Note</li>
+  <li>Noragami</li>
+  <li>Your Lie in April</li>
+  <li>Akame ga Kill</li>
+  <li>No Game No Life</li>
+  <li>The Promised Neverland</li>
+  <li>Toradora!</li>
+</ul>
+</body>
 </html>
+
